--- a/ui/assets/styles/hc-light.css
+++ b/ui/assets/styles/hc-light.css
@@ -6836,11 +6836,18 @@ z-select.z-select-host-interface li[disabled] .description:not(:empty),
 
 .global-macro-table .table-col-value,
 .global-macro-table .table-col-template-value,
+.global-macro-table .table-col-parent-value,
+.global-macro-table .table-col-global-value,
 .inherited-macros-table .table-col-value,
 .inherited-macros-table .table-col-template-value,
+.inherited-macros-table .table-col-parent-value,
+.inherited-macros-table .table-col-global-value,
 .host-macros-table .table-col-value,
-.host-macros-table .table-col-template-value {
-  width: 300px; }
+.host-macros-table .table-col-template-value,
+.host-macros-table .table-col-parent-value,
+.host-macros-table .table-col-global-value {
+  width: 300px;
+  white-space: nowrap; }
 
 .active-readonly[readonly] {
   color: #000000;
